--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,15 +2,15 @@
 GameName=ExecutionDome
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/MyAssets/Maps/MainMenu.MainMenu
-GameDefaultMap=/Game/MyAssets/Maps/MainMenu.MainMenu
+EditorStartupMap=/Game/MyAssets/Maps/HomeScreen.HomeScreen
+GameDefaultMap=/Game/MyAssets/Maps/HomeScreen.HomeScreen
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
-GameInstanceClass=/Game/MyAssets/GameInstances/GI_ExecutionDome.GI_ExecutionDome_C
+GameInstanceClass=/Game/MyAssets/GameInstance/GI_ThunderDome.GI_ThunderDome_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_14
@@ -32,6 +32,34 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
+-D3D12TargetedShaderFormats=PCD3D_SM5
++D3D12TargetedShaderFormats=PCD3D_SM5
++D3D12TargetedShaderFormats=PCD3D_SM6
+-D3D11TargetedShaderFormats=PCD3D_SM5
++D3D11TargetedShaderFormats=PCD3D_SM5
+bGenerateNaniteFallbackMeshes=True
+Compiler=Default
+AudioSampleRate=48000
+AudioCallbackBufferFrameSize=1024
+AudioNumBuffersToEnqueue=1
+AudioMaxChannels=0
+AudioNumSourceWorkers=4
+SpatializationPlugin=
+SourceDataOverridePlugin=
+ReverbPlugin=
+OcclusionPlugin=
+CompressionOverrides=(bOverrideCompressionTimes=False,DurationThreshold=5.000000,MaxNumRandomBranches=0,SoundCueQualityIndex=0)
+CacheSizeKB=65536
+MaxChunkSizeOverrideKB=0
+bResampleForDevice=False
+MaxSampleRate=48000.000000
+HighSampleRate=32000.000000
+MedSampleRate=24000.000000
+LowSampleRate=12000.000000
+MinSampleRate=8000.000000
+CompressionQualityModifier=1.000000
+AutoStreamingThreshold=0.000000
+SoundCueCookQualityIndex=-1
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/ExecutionDome")
